--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "1.1.3",
     "css-loader": "^0.28.4",
     "dotenv": "4.0.0",
+    "escape-string-regexp": "^1.0.5",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
@@ -41,11 +42,13 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.0.0",
+    "react-awesome-button": "^4.2.0",
     "react-awesome-slider": "^0.5.1",
     "react-burger-menu": "^2.4.2",
     "react-color": "^2.13.8",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.9",
     "react-flatpickr": "^3.6.3",
     "react-onclickoutside": "^6.6.3",
     "react-quill": "^1.2.3",
