--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.9",
     "react-flatpickr": "^3.6.3",
+    "react-lazy-load": "^3.0.13",
     "react-onclickoutside": "^6.6.3",
     "react-quill": "^1.2.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
     "redux-thunk": "^2.2.0",
