--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.0.0",
+    "react-awesome-slider": "^0.5.1",
     "react-burger-menu": "^2.4.2",
     "react-color": "^2.13.8",
     "react-dev-utils": "^4.1.0",
