--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-react-app": "^3.0.3",
     "babel-runtime": "6.26.0",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "^0.28.4",
