--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Portfolio-Site-2",
-  "homepage": "http://AidanPrehatny.github.io/Portfolio-Site-2",
+  "homepage": "http://AidanPrehatny.github.io/Portfolio-Site-2/build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
